# example-queries-solana-verify

./: Anchor.toml  README.md  package-lock.json  package.json
programs/example-queries-solana-verify/: Cargo.toml
programs/example-queries-solana-verify/src/: error.rs  lib.rs
programs/example-queries-solana-verify/src/instructions/: mod.rs  post_signatures.rs  verify_query.rs
programs/example-queries-solana-verify/src/processor/: mod.rs  post_signatures.rs  verify_query.rs  verify_signatures.rs
programs/example-queries-solana-verify/src/state/: guardian_signatures.rs  mod.rs  query_signature_set.rs
programs/example-queries-solana-verify/src/state/ext/: mod.rs
programs/example-queries-solana-verify/src/structs/: query_request.rs  query_response.rs
tests/: README.md  example-queries-solana-verify.ts
tests/accounts/core_bridge_mainnet/: config.json  guardian_set_3.json  guardian_set_4_mock.json
tests/helpers/: verifySignature.ts
