[package]
name = "example-queries-solana-verify"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_queries_solana_verify"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
wormhole-anchor-sdk = { version = "0.29.0-alpha.1"}
wormhole-core-bridge-solana = "0.0.1-alpha.5"
